--- a/_posts/2023-06-11-row-relational-operations/row-relational-operations.Rmd
+++ b/_posts/2023-06-11-row-relational-operations/row-relational-operations.Rmd
@@ -11,7 +11,7 @@ author:
     affiliation: University of Pennsylvania Linguistics
     affiliation_url: https://live-sas-www-ling.pantheon.sas.upenn.edu/
     orcid_id: 0000-0002-0701-921X
-date: "`r Sys.Date()`"
+date: 06-11-2023
 output:
   distill::distill_article:
     include-after-body: "highlighting.html"
